added a my form

--- a/index.html
+++ b/index.html
@@ -4,6 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+      label {
+        display: block;
+        margin-bottom: 10px;
+      }
+      table {
+        border-collapse: collapse;
+      }
+      td,th {
+        border: 2px solid black;
+        padding: 5px 10px;
+      }
+    </style>
 </head>
 <body>
     <h1> <i>  My Travel Blok </i> </h1>
@@ -38,6 +51,63 @@
    </P>
    <h1 s> Antor </h1>
    <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut voluptatem, dolores molestiae tempore veniam architecto obcaecati libero officiis aperiam maxime, veritatis atque. Placeat obcaecati illum mollitia molestias enim, impedit sequi?</p>
+    
+   <form>
+    <label id="name"> Your Name :
+      <input type="text" placeholder="Your Name">
+    </label>
+    <label id="email"> Your Email :
+      <input type="email" placeholder="Your Email">
+    </label>
+    <label id="name"> Your Phone
+      <input type="phone" placeholder="Your Phone">
+    </label>
+   </form>
+       
+   <fieldset>
+    <legend>
+      Select
+    </legend>
+    <label>
+      <input type="radio" name="class">Class 9
+    </label>
+    <label>
+      <input type="radio" name="class">Class 10
+    </label>
+    <label>
+      <input type="radio" name="class">Class 11
+    </label>
+    <label>
+      <input type="radio" name="class">Class 12
+    </label>
+   </fieldset>
+
+   <table>
+    <thead>
+      <tr>
+        <th>No</th>
+        <th>Name</th>
+        <th>Selary</th>
+      </tr>
+    </thead>
+     <tr>
+      <td>1</td>
+      <td>Tarek</td>
+      <td>100$</td>
+     </tr>
+     <tr>
+      <td>2</td>
+      <td>Anik</td>
+      <td>100$</td>
+     </tr>
+     <tr>
+      <td>3</td>
+      <td>Pronob</td>
+      <td>100$</td>
+     </tr>
+
+
+   </table>
 
 
 
