--- a/index.html
+++ b/index.html
@@ -17,8 +17,28 @@
         padding: 5px 10px;
       }
     </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <nav>
+    <ul>
+    <li><a href="index.html">Blog</a></li>
+    <li><a href="index1.html">Table</a></li>
+    <li><a href="index2.html">About</a>
+    <ul class="drop">
+      <li><a href="index.html">Blog</a></li>
+      <li><a href="index1.html">Table</a>
+        <ul class="drop">
+          <li><a href="index.html">Blog</a></li>
+          <li><a href="index1.html">Table</a></li>
+          <li><a href="index2.html">About</a></li>
+        </ul>
+      </li>
+      <li><a href="index2.html">About</a></li>
+    </ul>
+  </li>
+  </ul>
+</nav>
     <h1> <i>  My Travel Blok </i> </h1>
     <div> 
       <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias iusto repellendus magnam hic dicta illo. Ea non rerum provident amet in consectetur voluptatum dignissimos quisquam minima quod minus qui incidunt, asperiores harum deleniti sint rem vel dicta est repudiandae nihil aspernatur odio. Adipisci minus vel veniam, totam quibusdam, labore ipsum eius voluptatum eum blanditiis rem iusto recusandae repellat nobis eos quasi eveniet minima enim sint cum deserunt neque nostrum cumque eaque. Consectetur facere perspiciatis sequi autem ipsa, odit ipsum eveniet voluptatum eos quam unde nisi vero reiciendis architecto esse eaque laudantium exercitationem voluptatibus amet, ipsam sapiente! Assumenda ad laboriosam optio? </p>
@@ -81,7 +101,7 @@
       <input type="radio" name="class">Class 12
     </label>
    </fieldset>
-
+<br> <br> <br>
    <table>
     <thead>
       <tr>
